--- a/pom.xml
+++ b/pom.xml
@@ -10,34 +10,47 @@
     <name>WebStore</name>
     <url>http://maven.apache.org</url>
 
+    <properties>
+        <javax.version>7.0</javax.version>
+        <junit.version>3.8.1</junit.version>
+        <mysql.version>6.0.5</mysql.version>
+        <jstl.version>1.2</jstl.version>
+        <jsonsimple.version>1.1.1</jsonsimple.version>
+    </properties>
+
     <dependencies>
 
         <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
-          <version>3.8.1</version>
+          <version>${junit.version}</version>
           <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>7.0</version>
+            <version>${javax.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>6.0.5</version>
+            <version>${mysql.version}</version>
         </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
-            <version>1.2</version>
+            <version>${jstl.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>${jsonsimple.version}</version>
+        </dependency>
 
     </dependencies>
 
