Log files added to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /target/**
 /out/**
 WebStore.iml
+*.log
 /src/main/webapp/resources/bootstrap/css/**
 /src/main/webapp/resources/bootstrap/fonts/**
 /src/main/webapp/resources/bootstrap/js/**
